--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,11 @@ buildscript {
 
 apply plugin: 'me.tatarka.retrolambda'
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'cn.bmob.android:bmob-sdk:3.4.5'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile project(':zxing')
+    compile project(':materiallog')
 }
