--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <application
         android:name=".Views.PathNode"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/shareplay_home_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -29,7 +29,7 @@
         </activity>
         <activity android:name=".MessageActivity" />
         <activity android:name=".ScanActivity" />
-        <activity android:name=".DrawActivity"></activity>
+        <activity android:name=".DrawActivity"/>
     </application>
 
 </manifest>
