--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile project(':zxing')
     compile project(':materiallog')
+    compile project(':cirlib')
 }
